<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_title"
                android:textColor="@color/white"
                android:textSize="48sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/money_label"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/reais"
                    android:textColor="@color/white"
                    android:textSize="56sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight=".5"></Space>

                <EditText
                    android:id="@+id/money_value"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/money_input_hint"
                    android:ems="10"
                    android:hint="@string/money_input_hint"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textSize="48sp"
                    android:backgroundTint="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/money_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/group_icon_description"
                    app:srcCompat="@drawable/ic_baseline_group_24" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight=".35"></Space>

                <EditText
                    android:id="@+id/people_value"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/people_input_hint"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/people_input_hint"
                    android:inputType="numberSigned"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textSize="48sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/people_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/result"
                android:textColor="@color/white"
                android:textSize="48sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/share_icon_description"
                    android:focusable="true"
                    app:backgroundTint="@color/primary"
                    app:fabCustomSize="64dp"
                    app:maxImageSize="42dp"
                    app:rippleColor="@color/white"
                    app:srcCompat="@drawable/ic_baseline_share_24"
                    app:tint="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"></Space>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/speak_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/sound_icon_description"
                    android:focusable="true"
                    app:backgroundTint="@color/primary"
                    app:fabCustomSize="64dp"
                    app:maxImageSize="42dp"
                    app:rippleColor="@color/white"
                    app:srcCompat="@drawable/ic_baseline_volume_up_24"
                    app:tint="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>